lazy loading images

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </div>
         </aside>
         <div class="logo">
-          <img src="/capitalAssets/capital one logo.png" alt="" />
+          <img src="/capitalAssets/capital one logo.png" alt="" loading="lazy"/>
         </div>
         <ul class="nav-list">
           <li><a href="">Credit Cards</a></li>
