changed nav title from transfers to payments

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -51,7 +51,7 @@
         ></label>
         <ul class="menu">
           <li><a href="#">Home</a></li>
-          <li><a href="/html/payments.html">Transfer</a></li>
+          <li><a href="/html/payments.html">Payments</a></li>
           <li><a href="/html/cards.html">Cards</a></li>
           <li><a href="/html/invoice.html">Invoicing</a></li>
           <li>
