--- a/html/invoice.html
+++ b/html/invoice.html
@@ -19,7 +19,7 @@
         <nav class="desktop-nav">
             <ul>
                 <li><a href="#">Home <i class="fas fa-home"></i></a></li>
-                <li><a href="#">Transfer <i class="fas fa-money-bill"></i></a></li>
+                <li><a href="#">Payments <i class="fas fa-money-bill"></i></a></li>
                 <li><a href="#">Cards <i class="fas fa-credit-card"></i></a></li>
                 <li><a href="#">Invoicing <i class="fas fa-file-invoice"></i></a></li>
                 <li><a href="logout.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
@@ -31,7 +31,7 @@
             <label for="menu-toggle" class="menu-icon">&#9776;</label>
             <ul class="menu">
                 <li><a href="#">Home <i class="fas fa-home"></i></a></li>
-                <li><a href="#">Transfer <i class="fas fa-money-bill"></i></a></li>
+                <li><a href="#">Payments <i class="fas fa-money-bill"></i></a></li>
                 <li><a href="#">Cards <i class="fas fa-credit-card"></i></a></li>
                 <li><a href="#">Invoicing <i class="fas fa-file-invoice"></i></a></li>
                 <li><a href="logout.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
