added favicon for pages

--- a/html/invoice.html
+++ b/html/invoice.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invoicing</title>
-
+    <link
+    rel="shortcut icon"
+    href="/capitalAssets/favi.png"
+    type="image/x-icon"
+  />
     <link rel="stylesheet" href="/css/dashboard.css">
     <link rel="stylesheet" href="/css/payment.css">
     <link rel="stylesheet" href="/css/cards.css">
