--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="/capitalAssets/favi.png"
+      type="image/x-icon"
+    />
     <title>Dashboard - Capital One</title>
     <link rel="stylesheet" href="/css/dashboard.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <script src="/js/dashboard.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="/js/dashboard.js" defer></script>
   </head>
 
   <body>
@@ -37,9 +43,7 @@
             ></a>
           </li>
           <li>
-            <a  id="logout-link" 
-              ><i class="fas fa-sign-out-alt"></i> Logout</a
-            >
+            <a id="logout-link"><i class="fas fa-sign-out-alt"></i> Logout</a>
           </li>
         </ul>
       </nav>
@@ -55,7 +59,7 @@
           <li><a href="/html/cards.html">Cards</a></li>
           <li><a href="/html/invoice.html">Invoicing</a></li>
           <li>
-            <a href="#" id="logout-link" 
+            <a href="#" id="logout-link"
               ><i class="fas fa-sign-out-alt"></i> Logout</a
             >
           </li>
@@ -85,7 +89,7 @@
       <section class="date-range">
         <div class="date-box">
           <i class="fas fa-calendar"></i>
-          <p>May 17, 2020 - <span class="period" ></span></p>
+          <p>May 17, 2020 - <span class="period"></span></p>
         </div>
       </section>
 
@@ -255,7 +259,5 @@
         },
       });
     </script>
-
-   
   </body>
 </html>
