--- a/html/cards.html
+++ b/html/cards.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="/capitalAssets/favi.png"
+      type="image/x-icon"
+    />
     <title>Cards</title>
 
+    <!-- <link rel="stylesheet" href="/capital.css" /> -->
     <link rel="stylesheet" href="/css/cards.css" />
+    <!-- <link rel="stylesheet" href="/css/dashboard.css" /> -->
+    <!-- <link rel="stylesheet" href="/css/payment.css" /> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -52,7 +60,7 @@
             <a href="#">Invoicing <i class="fas fa-file-invoice"></i></a>
           </li>
           <li>
-            <a href="logout.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
+            <a href="/index.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
           </li>
         </ul>
       </nav>
