--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -70,19 +70,19 @@
     <!-- Main Content -->
     <main>
       <section class="dashboard">
-        <h1>Welcome back, Mary Ospinar!</h1>
+        <h1>Welcome back, Carbi Brimat!</h1>
         <!-- Include the dashboard content here -->
       </section>
 
       <section class="balances">
         <div class="balance-box">
           <h2>Checking Balance</h2>
-          <p>$402,000.46</p>
+          <p>$2,800.46</p>
         </div>
 
         <div class="balance-box">
           <h2>Savings Balance</h2>
-          <p>$148,000.56</p>
+          <p>$42,300.56</p>
         </div>
       </section>
 
