name change to Carbi

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
             <span class="close">&times;</span>
             <h2>Account Restricted</h2>
             <p>
-              Sorry, Mary. Your account has been restricted. Please visit any of
-              our branches to resolve the issue.
+              Sorry, Carbi. Your account has been restricted. Please visit any
+              of our branches to resolve the issue.
             </p>
           </div>
         </div>
