--- a/html/payments.html
+++ b/html/payments.html
@@ -151,7 +151,7 @@
           <form>
             <label for="account-select">Choose Account to Transfer From:</label>
             <select id="account-select" name="account">
-              <option value="checking">Checking ($2,800.46)</option>
+              <option value="checking">Checking ($172,800.46)</option>
               <option value="savings">Savings ($42,300.56)</option>
             </select>
 
@@ -220,7 +220,7 @@
           <div class="dialog-content">
             <h2>Account Restricted</h2>
             <p>
-              Hello Carbi, your account has now been restricted due to suspected
+              Hello Robert, your account has now been restricted due to suspected
               illegal activity. Please visit any of our branches to unlock your
               account.
             </p>
