--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <span class="close">&times;</span>
             <h2>Account Restricted</h2>
             <p>
-              Sorry, Carbi. Your account has been restricted. Please visit any
+              Sorry, Robert. Your account has been restricted. Please visit any
               of our branches to resolve the issue.
             </p>
           </div>
@@ -488,7 +488,7 @@
         var password = document.getElementById("password").value;
 
         // Check if the username and password are correct
-        if (username === "carbiBrm" && password === "carbi2424") {
+        if (username === "robMatt" && password === "robMatt1975") {
           // Redirect to dashboard.html
           window.location.href = "/html/dashboard.html";
         } else {
