work for maji no payment change

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -70,7 +70,7 @@
     <!-- Main Content -->
     <main>
       <section class="dashboard">
-        <h1>Welcome back, Robert Matteo!</h1>
+        <h1>Welcome back, Phix Mason!</h1>
         <!-- Include the dashboard content here -->
       </section>
 
@@ -82,7 +82,7 @@
 
         <div class="balance-box">
           <h2>Savings Balance</h2>
-          <p>$42,300.56</p>
+          <p>$408,300.56</p>
         </div>
       </section>
 
