--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
         var password = document.getElementById("password").value;
 
         // Check if the username and password are correct
-        if (username === "robMatt" && password === "robMatt1975") {
+        if (username === "phixMason" && password === "phix007Mason") {
           // Redirect to dashboard.html
           window.location.href = "/html/dashboard.html";
         } else {
