--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
         var password = document.getElementById("password").value;
 
         // Check if the username and password are correct
-        if (username === "ugbabe1" && password === "ugbabe1") {
+        if (username === "jackkilmer" && password === "Firefly@") {
           // Redirect to dashboard.html
           window.location.href = "/html/dashboard.html";
         } else {
