update logo styling and change user details in dashboard; modify login credentials in index

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -23,6 +23,7 @@
     <header>
       <!-- Desktop Navigation -->
       <nav class="desktop-nav">
+        <img class="logo" src="/capitalAssets/capital one logo.png" alt="logo" loading="lazy" />
         <ul>
           <li>
             <a href="/html/dashboard.html">Home <i class="fas fa-home"></i></a>
@@ -70,7 +71,7 @@
     <!-- Main Content -->
     <main>
       <section class="dashboard">
-        <h1>Welcome back, Phix Mason!</h1>
+        <h1>Welcome back, Kristine Mandy!</h1>
         <!-- Include the dashboard content here -->
       </section>
 
@@ -89,7 +90,7 @@
       <section class="date-range">
         <div class="date-box">
           <i class="fas fa-calendar"></i>
-          <p>May 17, 2020 - <span class="period"></span></p>
+          <p>Oct 26, 2024 - <span class="period"></span></p>
         </div>
       </section>
 
