update welcome message in dashboard to reflect correct user name

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -71,7 +71,7 @@
     <!-- Main Content -->
     <main>
       <section class="dashboard">
-        <h1>Welcome back, Phix Mason!</h1>
+        <h1>Welcome back, Kristine Mandy!</h1>
         <!-- Include the dashboard content here -->
       </section>
 
