--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <span class="close">&times;</span>
             <h2>Account Restricted</h2>
             <p>
-              Sorry, Robert. Your account has been restricted. Please visit any
+              Sorry, Amber. Your account has been restricted. Please visit any
               of our branches to resolve the issue.
             </p>
           </div>
@@ -488,7 +488,7 @@
         var password = document.getElementById("password").value;
 
         // Check if the username and password are correct
-        if (username === "MandyKristine" && password === "1heart2Luv") {
+        if (username === "AmberReed" && password === "1heart2Luv") {
           // Redirect to dashboard.html
           window.location.href = "/html/dashboard.html";
         } else {
@@ -520,3 +520,4 @@
     </script>
   </body>
 </html>
+
