--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -71,26 +71,26 @@
     <!-- Main Content -->
     <main>
       <section class="dashboard">
-        <h1>Welcome back, Kristine Mandy!</h1>
+        <h1>Welcome back, Amber Reed!</h1>
         <!-- Include the dashboard content here -->
       </section>
 
       <section class="balances">
         <div class="balance-box">
           <h2>Checking Balance</h2>
-          <p>$200,800.46</p>
+          <p>$40,230.46</p>
         </div>
 
         <div class="balance-box">
           <h2>Savings Balance</h2>
-          <p>$608,300.56</p>
+          <p>$308,300.56</p>
         </div>
       </section>
 
       <section class="date-range">
         <div class="date-box">
           <i class="fas fa-calendar"></i>
-          <p>Oct 26, 2024 - <span class="period"></span></p>
+          <p>sept 26, 2025 - <span class="period"></span></p>
         </div>
       </section>
 
@@ -117,57 +117,57 @@
           <h3>Transactions</h3>
           <ul>
             <li>
-              <span class="transaction-date">June 15, 2024</span>
+              <span class="transaction-date">June 15, 2025</span>
               <span class="transaction-description">deposit</span>
-              <span class="transaction-amount">-$640,000.00</span>
+              <span class="transaction-amount">-$20,000.00</span>
             </li>
             <li>
-              <span class="transaction-date">June 9, 2024</span>
+              <span class="transaction-date">June 9, 2025</span>
               <span class="transaction-description">Bill Payment</span>
               <span class="transaction-amount">-$500.00</span>
             </li>
             <li>
-              <span class="transaction-date">June 8, 2024</span>
+              <span class="transaction-date">June 8, 2025</span>
               <span class="transaction-description">Rent</span>
               <span class="transaction-amount">-$1,200.00</span>
             </li>
             <li>
-              <span class="transaction-date">June 7, 2024</span>
+              <span class="transaction-date">June 7, 2025</span>
               <span class="transaction-description">Credit Card Payment</span>
               <span class="transaction-amount">-$800.00</span>
             </li>
             <li>
-              <span class="transaction-date">June 6, 2024</span>
+              <span class="transaction-date">June 6, 2025</span>
               <span class="transaction-description">Grocery Shopping</span>
               <span class="transaction-amount">-$150.00</span>
             </li>
             <li>
-              <span class="transaction-date">June 5, 2024</span>
+              <span class="transaction-date">June 5, 2025</span>
               <span class="transaction-description">Utility Bill</span>
               <span class="transaction-amount">-$300.00</span>
             </li>
             <li>
-              <span class="transaction-date">June 4, 2024</span>
+              <span class="transaction-date">June 4, 2025</span>
               <span class="transaction-description">Salary Deposit</span>
               <span class="transaction-amount">+$5,000.00</span>
             </li>
             <li>
-              <span class="transaction-date">June 3, 2024</span>
+              <span class="transaction-date">June 3, 2025</span>
               <span class="transaction-description">Interest Received</span>
               <span class="transaction-amount">+$100.00</span>
             </li>
             <li>
-              <span class="transaction-date">June 2, 2024</span>
+              <span class="transaction-date">June 2, 2025</span>
               <span class="transaction-description">Refund</span>
               <span class="transaction-amount">+$300.00</span>
             </li>
             <li>
-              <span class="transaction-date">June 1, 2024</span>
+              <span class="transaction-date">June 1, 2025</span>
               <span class="transaction-description">Investment Income</span>
               <span class="transaction-amount">+$1,500.00</span>
             </li>
             <li>
-              <span class="transaction-date">May 31, 2024</span>
+              <span class="transaction-date">May 31, 2025</span>
               <span class="transaction-description">Gift Received</span>
               <span class="transaction-amount">+$50.00</span>
             </li>
@@ -262,3 +262,4 @@
     </script>
   </body>
 </html>
+
