--- a/html/payments.html
+++ b/html/payments.html
@@ -151,8 +151,8 @@
           <form>
             <label for="account-select">Choose Account to Transfer From:</label>
             <select id="account-select" name="account">
-              <option value="checking">Checking ($172,800.46)</option>
-              <option value="savings">Savings ($42,300.56)</option>
+              <option value="checking">Checking ($42,800.46)</option>
+              <option value="savings">Savings ($308,300.56)</option>
             </select>
 
             <label for="beneficiary-account">Beneficiary Account Number:</label>
@@ -220,7 +220,7 @@
           <div class="dialog-content">
             <h2>Account Restricted</h2>
             <p>
-              Hello Robert, your account has now been restricted due to suspected
+              Hello Amber your account has now been restricted due to suspected
               illegal activity. Please visit any of our branches to unlock your
               account.
             </p>
@@ -249,3 +249,4 @@
     </script>
   </body>
 </html>
+
