--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -71,14 +71,14 @@
     <!-- Main Content -->
     <main>
       <section class="dashboard">
-        <h1>Welcome back, Amber Reed!</h1>
+        <h1>Welcome back, Brianna Bidwell!</h1>
         <!-- Include the dashboard content here -->
       </section>
 
       <section class="balances">
         <div class="balance-box">
           <h2>Checking Balance</h2>
-          <p>$40,230.46</p>
+          <p>$65,340</p>
         </div>
 
         <div class="balance-box">
@@ -262,4 +262,3 @@
     </script>
   </body>
 </html>
-
