Modify payment form and account details
Updated account balances and restricted account message.

--- a/html/payments.html
+++ b/html/payments.html
@@ -151,7 +151,7 @@
           <form>
             <label for="account-select">Choose Account to Transfer From:</label>
             <select id="account-select" name="account">
-              <option value="checking">Checking ($42,800.46)</option>
+              <option value="checking">Checking ($65,800.46)</option>
               <option value="savings">Savings ($308,300.56)</option>
             </select>
 
@@ -182,15 +182,14 @@
               placeholder="Enter beneficiary's bank name"
               required
             />
-            <label for="beneficiary-name">Beneficiary's Name:</label>
+           <!-- <label for="beneficiary-name">Beneficiary's Name:</label>
             <input
               type="text"
               id="beneficiary-name"
               name="beneficiary-name"
               placeholder="Beneficiary's name"
-              disabled
               required
-            />
+            />-->
 
             <label for="amount">Transaction Amount:</label>
             <input
@@ -220,8 +219,8 @@
           <div class="dialog-content">
             <h2>Account Restricted</h2>
             <p>
-              Hello Amber your account has now been restricted due to suspected
-              illegal activity. Please visit any of our branches to unlock your
+              Hello Brianna! your account has now been restricted due to suspected
+             activity. Please visit any of our branches to unlock your
               account.
             </p>
           </div>
@@ -249,4 +248,5 @@
     </script>
   </body>
 </html>
+
 
